--- a/XMLTaskHLO5ZK/.settings/org.eclipse.core.resources.prefs
+++ b/XMLTaskHLO5ZK/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/hu/domparse/hlo5zk/DOMModifyHLO5ZK.java=UTF-8
+encoding//src/hu/domparse/hlo5zk/DOMQueryHLO5ZK.java=UTF-8
